--- a/simple_list.html
+++ b/simple_list.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>List</title>
+    <title>Count</title>
 </head>
 <body>
 {{range .}}
     <br>
-    Book name:{{.Name}}<br>
-    Published: {{.Year}}<br>
-    Length: {{.Length}}<br>
+    Car mark:{{.Name}}<br>
+    Year: {{.Year}}<br>
+    Price: {{.Price}}<br>
+    Country: {{.Country}}<br>
     <br>
 {{end}}
 </body>
