--- a/simple_form.html
+++ b/simple_form.html
@@ -7,9 +7,10 @@
 <body>
 <form action="/add" method="POST">
     <div>
-        Book name:<input type="text" name="name"><br><br>
-        Published:<input type="text" name="year"><br><br>
-        Length:<input type="text" name="length"><br><br>
+        Car mark:<input type="text" name="name"><br><br>
+        Year:<input type="text" name="year"><br><br>
+        Price:<input type="text" name="price"><br><br>
+        Country:<input type="text" name="country"><br><br>
     </div>
     <div><input type="submit" value="Save"></div>
 </form>
